fixed chart wrap box shadow

--- a/src/pages/Overview.module.css
+++ b/src/pages/Overview.module.css
@@ -6,7 +6,7 @@
 }
 .chart-wrap {
     background-color: #fff;
-    box-shadow: 0 5px 10px rgb(218, 218, 218, 0.5);
+    box-shadow: 0 0 10px rgb(218, 218, 218, 0.5);
     margin-top: 50px;
     border-radius: 30px;
     padding: 30px;
